# Loom

./: .gitignore  README.md  pyproject.toml
agent/: core.py
api/: main.py
data/: feedback_log.jsonl  recall_interactions.json  sample_events.json  vector_store.json
demo/: app.py
ingest/: jupiter_adapter.py  jupiter_client.py  loader.py
memory/: forget.py  improve.py  recall.py  vector_store.py
tests/: test_agent.py  test_cognee_smoke.py  test_forget.py  test_improve.py  test_ingest.py  test_jupiter_client.py  test_recall.py
web/: index.html  package-lock.json  package.json  tailwind.config.ts
web/src/: App.tsx  index.css
web/src/components/: DashboardPage.tsx  ForgetPage.tsx  ImprovePage.tsx  RecallPage.tsx  RememberPage.tsx  Sidebar.tsx  ui.tsx
web/src/lib/: api.ts
