[project]
name = "loom"
version = "0.1.0"
description = "Memory-augmented market intelligence agent — hackathon build"
requires-python = ">=3.11"
dependencies = [
    "cognee[all]",
    "python-dotenv",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: calls external APIs — skip in CI with -m 'not integration'",
]
